# gnome-dictionary-lookup-bridge

./: .gitignore  README.md  meson.build  package-lock.json  package.json
data/: gnome_dictionary_lookup.json
meta/: README.md.njk
src/: gnome_dictionary_lookup.py
